add types and error for user handlers and service functions

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,7 +6,7 @@ volumes:
 
 services:
   db:
-    image: postgres
+    image: postgres:14-bullseye
     container_name: ${POSTGRES_DB}
     restart: unless-stopped
     volumes:
