--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test:int": "IS_INTEGRATION_TESTING=true jest --config jest/integrationTests.config.json --runInBand",
+    "test:int-no-coverage": "IS_INTEGRATION_TESTING=true jest --config jest/integrationTests.config.json --collectCoverage=false --runInBand",
     "dev": "ts-node-dev index.ts",
     "temp-database-up": "docker-compose up -d",
     "temp-database-down": "docker-compose down",
@@ -19,9 +20,12 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@babel/preset-typescript": "^7.23.0",
+    "@jest/globals": "^29.7.0",
     "@types/cls-hooked": "^4.3.4",
     "@types/cors": "^2.8.13",
     "@types/jest": "^29.5.3",
+    "@types/supertest": "^2.0.14",
     "@types/uuid": "^9.0.2",
     "@typescript-eslint/eslint-plugin": "^5.46.0",
     "@typescript-eslint/parser": "^5.46.0",
@@ -29,7 +33,8 @@
     "eslint": "^8.29.0",
     "eslint-plugin-jest": "^27.1.6",
     "eslint-plugin-jest-formatting": "^3.1.0",
-    "jest": "^29.6.2",
+    "jest": "^29.7.0",
+    "supertest": "^6.3.3",
     "ts-jest": "^29.0.3",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.1.6"
