--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -24,12 +24,12 @@ jobs:
       - run:
           name: Set Database Environment Variables
           command: |
-            echo "POSTGRES_DB=$POSTGRES_DB" >> .env
-            echo "POSTGRES_HOST=$POSTGRES_HOST" >> .env
-            echo "POSTGRES_PASSWORD=$POSTGRES_PASSWORD" >> .env
-            echo "POSTGRES_PORT=$POSTGRES_PORT" >> .env
-            echo "POSTGRES_USER=$POSTGRES_USER" >> .env
-            echo "DATABASE_URL=postgresql://${POSTGRES_USER}:${POSTGRES_PASSWORD}@127.0.0.1:${POSTGRES_PORT}/${POSTGRES_DB}?schema=public" >> .env
+            echo "POSTGRES_DB=recipe-master" >> .env
+            echo "POSTGRES_HOST=127.0.0.1" >> .env
+            echo "POSTGRES_PASSWORD=123456789" >> .env
+            echo "POSTGRES_PORT=5432" >> .env
+            echo "POSTGRES_USER=camchu" >> .env
+            echo "DATABASE_URL=postgresql://${POSTGRES_USER}:${POSTGRES_PASSWORD}@${POSTGRES_HOST}:${POSTGRES_PORT}/${POSTGRES_DB}?schema=public" >> .env
             cat .env
       - run:
           name: Create Empty Temporary Database & Docker Compose
