--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -29,7 +29,7 @@ jobs:
             echo "POSTGRES_PASSWORD=123456789" >> .env
             echo "POSTGRES_PORT=5432" >> .env
             echo "POSTGRES_USER=camchu" >> .env
-            echo "DATABASE_URL=postgresql://${POSTGRES_USER}:${POSTGRES_PASSWORD}@${POSTGRES_HOST}:${POSTGRES_PORT}/${POSTGRES_DB}?schema=public" >> .env
+            echo "DATABASE_URL=postgresql://camchu:123456789@127.0.0.1:5432/recipe-master?schema=public" >> .env
             cat .env
       - run:
           name: Create Empty Temporary Database & Docker Compose
