--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -24,6 +24,11 @@ jobs:
       - run:
           name: Set Database Environment Variables
           command: |
+            echo "POSTGRES_DB=recipe-master" >> .env
+            echo "POSTGRES_HOST=127.0.0.1" >> .env
+            echo "POSTGRES_PASSWORD=123456789" >> .env
+            echo "POSTGRES_PORT=5432" >> .env
+            echo "POSTGRES_USER=camchu" >> .env
             echo "DATABASE_URL=postgresql://camchu:123456789@127.0.0.1:5432/recipe-master?schema=public" >> .env
             cat .env
       - run:
